fixed some layout problem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,10 +27,23 @@ body {
   padding-bottom: 70px;
 }
 
+a.card-title {
+  color: blue;
+}
+
 td {
   font-size: 10px;
 }
 
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+
+.navbar-collapse {
+  color: rgba(256,256,256, 0.7);
+
+}
 
 
 .ac {
@@ -40,8 +53,17 @@ td {
 .navbar {
   top: 0;
   position: fixed;
+  z-index: 2;
   width: 100%;
   min-height: 50px;
+}
+
+
+a .nav-link {
+  padding: .25rem 0;
+  font-weight: bold;
+  background-color: transparent;
+  border-bottom: .25rem solid transparent;
 }
 
 
@@ -306,7 +328,7 @@ body {
 
 .sidebar {
   position: fixed;
-  left: 0;
+  right: 0;
   top: 55px;
   z-index: 1000;
   overflow-x: hidden;
@@ -349,8 +371,7 @@ body {
 }
 
 .equipment-container {
-  margin-left: 15rem;
-  margin-top: 1rem;
+  padding-right: 9rem;
 }
 
 .add-new{
